force-app/main/default/objects/FedEx_Package__c/FedEx_Package__c.object-meta.xml
<CustomObject>
    <label>FedEx Package</label>
    <nameField>
        <label>FedEx Package Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>FedEx Packages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>