force-app/main/default/objects/FedEx_Package__c/fields/Package_Status__c.field-meta.xml
<CustomField>
    <fullName>Package_Status__c</fullName>
    <label>Package Status</label>
    <length>80</length>
    <type>Text</type>
</CustomField>