force-app/main/default/objects/FedEx_Package__c/fields/Tracking_Number__c.field-meta.xml
<CustomField>
    <fullName>Tracking_Number__c</fullName>
    <externalId>true</externalId>
    <label>Tracking Number</label>
    <length>80</length>
    <type>Text</type>
</CustomField>