force-app/main/default/objects/FedEx_Package__c/fields/Weight_Unit__c.field-meta.xml
<CustomField>
    <fullName>Weight_Unit__c</fullName>
    <label>Weight Unit</label>
    <length>20</length>
    <type>Text</type>
</CustomField>