force-app/main/default/objects/FedEx_Package__c/fields/Weight_Value__c.field-meta.xml
<CustomField>
    <fullName>Weight_Value__c</fullName>
    <label>Weight Value</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>